RESOLVED FIXED125930
Fix Dictionary encoding
https://bugs.webkit.org/show_bug.cgi?id=125930
Summary Fix Dictionary encoding
Anders Carlsson
Reported 2013-12-18 10:15:13 PST
Fix Dictionary encoding
Attachments
Patch (1.41 KB, patch)
2013-12-18 10:16 PST, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2013-12-18 10:16:51 PST
Andreas Kling
Comment 2 2013-12-18 10:21:39 PST
Comment on attachment 219544 [details] Patch Okay Anders. Okay. r=me
Anders Carlsson
Comment 3 2013-12-18 10:26:53 PST
Note You need to log in before you can comment on or make changes to this bug.