Fix Dictionary encoding https://bugs.webkit.org/show_bug.cgi?id=125930

Reviewed by Andreas Kling.

Encode the HashMap size as a 64-bit unsigned integer.

* Shared/UserData.cpp:
(WebKit::UserData::encode):

Canonical link: https://commits.webkit.org/143925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160776 268f45cc-cd09-0410-ab3c-d52691b4dbfc